Added JS to load book infor on frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,17 +13,21 @@
     <div class="top-header"><h1>Page-Turners Club</h1></div>
 
     <!-- Photo Grid-->
-  <div class="photo-container">
+    <div id=books-content>
 
-    <div class="quarter-container">
+    </div>
 
-      <h1 id =testingbooks></h1>
 
-      <img src="" alt="Book 1" id="image">
-      <h3 id="book-title">Brotopia: Breaking Up the Boys' Club of Silicon Valley</h3>
+<!--delete this - example of what it should look like -->
+    <!-- <div class="quarter-container">
+      <img id="image" src="" alt="Book 1" >
+      <h3 id="book-title">Brotopia: Breaking Up the Boys' Club of Silicon Valley</h3> -->
+      <!-- <div>
+        <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      </div> -->
 
       <!-- Add New Review -->
-      <div id="new-review-container">
+      <!-- <div id="new-review-container">
         <form id="review-form">
            <label> <h4>Add a New Review</h4> </label>
            <input type="text" id="new-review-input" value = "Click to add a new Review">
@@ -31,13 +35,7 @@
         </form>
       </div>
 
-      <!-- Current Reviews -->
-      <div>
-        <p id="review-container"></p>
-        <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-      </div>
-
-    </div>
+    </div> -->
 
     <!-- <div class="quarter-container">
       <img src="/something.jpg" alt="Book 2" class="image">
@@ -80,7 +78,7 @@
       <h3>Computer Science: An Interdisciplinary Approach</h3>
       <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div> -->
-  </div>
+  <!-- </div> -->
 
   <!-- Add New Book to Book Club -->
 
@@ -94,6 +92,7 @@
     </form>
   </div> -->
 
+  <script src="src/components/book.js"></script>
   <script src="src/components/books.js"></script>
   <script src="src/components/app.js"></script>
   <script src="src/adapters/BooksAdapter.js"></script>
