Added JS to create a new Book

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
         <input type="text" id="new-book-title" placeholder="Enter Book Title">
         <input type="text" id="new-book-author" placeholder="Enter Book Author">
         <input type="text" id="new-book-image" placeholder="Enter Book URL image">
-        <input type="submit" name="" value="Add Book">
+        <button type="submit">Add Book</button>
       </form>
     </div>
 
@@ -36,67 +36,6 @@
 
     </body>
   </html>
-
-
-<!--delete this - example of what it should look like -->
-<!-- ///////////////////////////////////////////////////////// -->
-<!-- ///////////////////////////////////////////////////////// -->
-<!-- ///////////////////////////////////////////////////////// -->
-<!-- ///////////////////////////////////////////////////////// -->
-<!-- ///////////////////////////////////////////////////////// -->
-
-
-    <!-- <div class="quarter-container">
-      <img id="image" src="" alt="Book 1" >
-      <h3 id="book-title">Brotopia: Breaking Up the Boys' Club of Silicon Valley</h3> -->
-      <!-- <div>
-        <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-      </div>
-    </div> -->
-
-    <!-- <div class="quarter-container">
-      <img src="/something.jpg" alt="Book 2" class="image">
-      <h3>The Innovators: How a Group of Hackers, Geniuses, and Geeks Created the Digital Revolution</h3>
-      <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-
-    <div class="quarter-container">
-      <img src="/something.jpg" alt="Book 3" class="image">
-      <h3>Einstein: His Life and Universe</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-
-    <div class="quarter-container">
-      <img src="/something.jpg" alt="Book 4" class="image">
-      <h3>Computer Science: An Interdisciplinary Approach</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-
-    <div class="quarter-container">
-      <img src="/something" alt="Book 5" class="image">
-      <h3>Brotopia: Breaking Up the Boys' Club of Silicon Valley</h3>
-      <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-
-    <div class="quarter-container">
-      <img src="/something.jpg" alt="Book 6" class="image">
-      <h3>The Innovators: How a Group of Hackers, Geniuses, and Geeks Created the Digital Revolution</h3>
-      <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-
-    <div class="quarter-container">
-      <img src="/something.jpg" alt="Book 7" class="image">
-      <h3>Einstein: His Life and Universe</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-
-    <div class="quarter-container">
-      <img src="/something.jpg" alt="Book 8" class="image">
-      <h3>Computer Science: An Interdisciplinary Approach</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div> -->
-  <!-- </div> -->
-
 
 
 
