added css flexbox

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
 
   <body>
     <!-- Top menu -->
+
     <div class="top-header"><h1>Book Club</h1></div>
 
     <!-- Add New Book to Book Club -->
@@ -23,8 +24,10 @@
       </form>
     </div>
 
-    <!-- Photo Grid-->
-    <div id=books-content>
+    <!-- Book Grid-->
+    <div class="container">
+      <section id="books-content">
+      </section>
     </div>
 
     <script src="src/components/book.js"></script>
