--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,6 +38,28 @@
       </form>
     </div>
 
+    <!-- Add New Review - Hidden by default-->
+    <div id="new-review-container">
+      <form id="new-review-form">
+        <div class="name-input">
+          <label for="new-review-reviewer">Your Name:</label>
+          <input type="text" id="new-review-reviewer" placeholder="Enter Your Name">
+        </div>
+
+        <br>
+
+        <div class="body-input">
+          <label for="new-review-body">Your Thoughts:</label>
+          <input type="text" id="new-review-body" placeholder="Enter Review">
+        </div>
+
+        <div id="buttons">
+          <button onclick="closeForm()" type="submit">Add</button>
+          <button onclick="closeForm()">Close</button>
+        </div>
+      </form>
+    </div>
+
     <!-- JS scripts-->
     <script src="src/components/book.js"></script>
     <script src="src/components/books.js"></script>
