fixed bug on adding reviews

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,20 +41,13 @@
     <!-- Add New Review - Hidden by default-->
     <div id="new-review-container">
       <form id="new-review-form">
-        <div class="name-input">
-          <label for="new-review-reviewer">Your Name:</label>
-          <input type="text" id="new-review-reviewer" placeholder="Enter Your Name">
-        </div>
-
-        <br>
-
         <div class="body-input">
           <label for="new-review-body">Your Thoughts:</label>
-          <input type="text" id="new-review-body" placeholder="Enter Review">
+          <input type="text" id="new-review-body" placeholder="Write your thoughts on this book --your name">
         </div>
 
         <div id="buttons">
-          <button onclick="closeForm()" type="submit">Add</button>
+          <!-- <button onlick="closeForm()" type="submit">Add</button> -->
           <button onclick="closeForm()">Close</button>
         </div>
       </form>
